<resources>
    <string name="app_name">Fixer Coding Task</string>
    <string name="flag_descripition">Country flag</string>
    <string name="go_description">GO button</string>
    <string name="default_currency_code">ASD</string>
    <string name="default_currency_name">Currency name</string>
    <string name="default_currency_value">42.123</string>

    <!-- Currencies -->
    <string name="currency_AED">UAE dirham</string>
    <string name="currency_AFN">Afghan afghani</string>
    <string name="currency_ALL">Albanian lek</string>
    <string name="currency_AMD">Armenian dram</string>
    <string name="currency_ANG">Netherlands Antillean guilder</string>
    <string name="currency_AOA">Angolan kwanza</string>
    <string name="currency_ARS">Argentine peso</string>
    <string name="currency_AUD">Australian dollar</string>
    <string name="currency_AWG">Aruban florin</string>
    <string name="currency_AZN">Azerbaijani manat</string>
    <string name="currency_BAM">BaH convertible mark</string>
    <string name="currency_BBD">Barbadian dollar</string>
    <string name="currency_BDT">Bangladeshi taka</string>
    <string name="currency_BGN">Bulgarian lev</string>
    <string name="currency_BHD">Bahraini dinar</string>
    <string name="currency_BIF">Burundian franc</string>
    <string name="currency_BMD">Bermudian dollar</string>
    <string name="currency_BND">Brunei dollar</string>
    <string name="currency_BOB">Bolivian boliviano</string>
    <string name="currency_BRL">Brazilian real</string>
    <string name="currency_BSD">Bahamian dollar</string>
    <string name="currency_BTC">Bitcoin</string>
    <string name="currency_BTN">Bhutanese ngultrum</string>
    <string name="currency_BWP">Botswana pula</string>
    <string name="currency_BYN">Belarusian ruble</string>
    <string name="currency_BYR">Belarusian ruble</string>
    <string name="currency_BZD">Belize dollar</string>
    <string name="currency_CAD">Canadian dollar</string>
    <string name="currency_CDF">Congolese franc</string>
    <string name="currency_CHF">Swiss franc</string>
    <string name="currency_CLF">Unidad de Fomento</string>
    <string name="currency_CLP">Chilean peso</string>
    <string name="currency_CNY">Renminbi</string>
    <string name="currency_COP">Colombian peso</string>
    <string name="currency_CRC">Costa Rican colón</string>
    <string name="currency_CUP">Cuban peso</string>
    <string name="currency_CVE">Cape Verdean escudo</string>
    <string name="currency_CZK">Czech koruna</string>
    <string name="currency_DJF">Djiboutian franc</string>
    <string name="currency_DKK">Danish krone</string>
    <string name="currency_DOP">Dominican peso</string>
    <string name="currency_DZD">Algerian dinar</string>
    <string name="currency_EGP">Egyptian pound</string>
    <string name="currency_ERN">Eritrean nakfa</string>
    <string name="currency_ETB">Ethiopian birr</string>
    <string name="currency_EUR">Euro</string>
    <string name="currency_FJD">Fijian dollar</string>
    <string name="currency_FKP">Falkland Islands pound</string>
    <string name="currency_GBP">Sterling</string>
    <string name="currency_GEL">Georgian lari</string>
    <string name="currency_GGP">Guernsey pound</string>
    <string name="currency_GHS">Ghanaian cedi</string>
    <string name="currency_GIP">Gibraltar pound</string>
    <string name="currency_GMD">Gambian dalasi</string>
    <string name="currency_GNF">Guinean franc</string>
    <string name="currency_GTQ">Guatemalan quetzal</string>
    <string name="currency_GYD">Guyanese dollar</string>
    <string name="currency_HKD">Hong Kong dollar</string>
    <string name="currency_HNL">Honduran lempira</string>
    <string name="currency_HRK">Croatian kuna</string>
    <string name="currency_HTG">Haitian gourde</string>
    <string name="currency_HUF">Hungarian forint</string>
    <string name="currency_IDR">Indonesian rupiah</string>
    <string name="currency_ILS">Israeli new shekel</string>
    <string name="currency_IMP">Manx pound</string>
    <string name="currency_INR">Indian rupee</string>
    <string name="currency_IQD">Iraqi dinar</string>
    <string name="currency_IRR">Iranian rial</string>
    <string name="currency_ISK">Icelandic króna</string>
    <string name="currency_JEP">Jersey pound</string>
    <string name="currency_JMD">Jamaican dollar</string>
    <string name="currency_JOD">Jordanian dinar</string>
    <string name="currency_JPY">Japanese yen</string>
    <string name="currency_KES">Kenyan shilling</string>
    <string name="currency_KGS">Kyrgyz som</string>
    <string name="currency_KHR">Cambodian riel</string>
    <string name="currency_KMF">Comorian franc</string>
    <string name="currency_KPW">North Korean won</string>
    <string name="currency_KRW">South Korean won</string>
    <string name="currency_KWD">Kuwaiti dinar</string>
    <string name="currency_KYD">Cayman Islands dollar</string>
    <string name="currency_KZT">Kazakhstani tenge</string>
    <string name="currency_LAK">Lao kip</string>
    <string name="currency_LBP">Lebanese pound</string>
    <string name="currency_LKR">Sri Lankan rupee</string>
    <string name="currency_LRD">Liberian dollar</string>
    <string name="currency_LSL">Lesotho loti</string>
    <string name="currency_LTL">Lithuanian litas</string>
    <string name="currency_LVL">Latvian lats</string>
    <string name="currency_LYD">Libyan dinar</string>
    <string name="currency_MAD">Moroccan dirham</string>
    <string name="currency_MDL">Moldovan leu</string>
    <string name="currency_MGA">Malagasy ariary</string>
    <string name="currency_MKD">Macedonian denar</string>
    <string name="currency_MMK">Burmese kyat</string>
    <string name="currency_MNT">Mongolian tögrög</string>
    <string name="currency_MOP">Macanese pataca</string>
    <string name="currency_MRO">Mauritanian ouguiya</string>
    <string name="currency_MUR">Mauritian rupee</string>
    <string name="currency_MVR">Maldivian rufiyaa</string>
    <string name="currency_MWK">Malawian kwacha</string>
    <string name="currency_MXN">Mexican peso</string>
    <string name="currency_MYR">Malaysian ringgit</string>
    <string name="currency_MZN">Mozambican metical</string>
    <string name="currency_NAD">Namibian dollar</string>
    <string name="currency_NGN">Nigerian naira</string>
    <string name="currency_NIO">Nicaraguan córdoba</string>
    <string name="currency_NOK">Norwegian krone</string>
    <string name="currency_NPR">Nepalese rupee</string>
    <string name="currency_NZD">New Zealand dollar</string>
    <string name="currency_OMR">Omani rial</string>
    <string name="currency_PAB">Panamanian balboa</string>
    <string name="currency_PEN">Peruvian sol</string>
    <string name="currency_PGK">Papua New Guinean kina</string>
    <string name="currency_PHP">Philippine peso</string>
    <string name="currency_PKR">Pakistani rupee</string>
    <string name="currency_PLN">Polish zloty</string>
    <string name="currency_PYG">Paraguayan guaraní</string>
    <string name="currency_QAR">Qatari riyal</string>
    <string name="currency_RON">Romanian leu</string>
    <string name="currency_RSD">Serbian dinar</string>
    <string name="currency_RUB">Russian ruble</string>
    <string name="currency_RWF">Rwandan franc</string>
    <string name="currency_SAR">Saudi riyal</string>
    <string name="currency_SBD">Solomon Islands dollar</string>
    <string name="currency_SCR">Seychellois rupee</string>
    <string name="currency_SDG">Sudanese pound</string>
    <string name="currency_SEK">Swedish krona</string>
    <string name="currency_SGD">Singapore dollar</string>
    <string name="currency_SHP">Saint Helena pound</string>
    <string name="currency_SLL">Sierra Leonean leone</string>
    <string name="currency_SOS">Somali shilling</string>
    <string name="currency_SRD">Surinamese dollar</string>
    <string name="currency_STD">São Tomé and Príncipe dobra</string>
    <string name="currency_SVC">Salvadoran colón</string>
    <string name="currency_SYP">Syrian pound</string>
    <string name="currency_SZL">Swazi lilangeni</string>
    <string name="currency_THB">Thai baht</string>
    <string name="currency_TJS">Tajikistani somoni</string>
    <string name="currency_TMT">Turkmenistan manat</string>
    <string name="currency_TND">Tunisian dinar</string>
    <string name="currency_TOP">Tongan paʻanga</string>
    <string name="currency_TRY">Turkish lira</string>
    <string name="currency_TTD">Trinidad and Tobago dollar</string>
    <string name="currency_TWD">New Taiwan dollar</string>
    <string name="currency_TZS">Tanzanian shilling</string>
    <string name="currency_UAH">Ukrainian hryvnia</string>
    <string name="currency_UGX">Ugandan shilling</string>
    <string name="currency_USD">United States dollar</string>
    <string name="currency_UYU">Uruguayan peso</string>
    <string name="currency_UZS">Uzbekistani soʻm</string>
    <string name="currency_VEF">enezuelan bolívar</string>
    <string name="currency_VND">Vietnamese đồng</string>
    <string name="currency_VUV">Vanuatu vatu</string>
    <string name="currency_WST">Samoan tālā</string>
    <string name="currency_XAF">Central African CFA franc</string>
    <string name="currency_XAG">Silver</string>
    <string name="currency_XAU">Gold</string>
    <string name="currency_XCD">Eastern Caribbean dollar</string>
    <string name="currency_XDR">Special Drawing Rights</string>
    <string name="currency_XOF">CFA franc</string>
    <string name="currency_XPF">CFP franc</string>
    <string name="currency_YER">Yemeni rial</string>
    <string name="currency_ZAR">South African rand</string>
    <string name="currency_ZMK">Old Zambian kwacha</string>
    <string name="currency_ZMW">Zambian kwacha</string>
    <string name="currency_ZWL">Zimbabwean dollar</string>
    <string name="header_description">Euro exchange rate as of</string>
</resources>