<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="rates"
            type="com.folen.fixercodingtask.model.Rates" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/spacing8"
        android:layout_marginEnd="@dimen/spacing8"
        android:padding="@dimen/spacing4">

        <ImageView
            android:id="@+id/rate_flag"
            style="@style/Image"
            android:layout_width="@dimen/spacing48"
            android:layout_height="@dimen/spacing32"
            android:contentDescription="@string/flag_descripition"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rate_code"
            style="@style/FixerBasicText.H2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing8"
            android:hint="@string/default_currency_code"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/rate_flag"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rate_name"
            style="@style/FixerBasicText.H3"
            android:layout_width="@dimen/wrap_constraint"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing68"
            android:gravity="start"
            android:hint="@string/default_currency_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rate_value"
            app:layout_constraintStart_toStartOf="@id/rate_code"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/rate_value"
            style="@style/FixerBasicText.H3.DigiFont"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/spacing24"
            android:hint="@string/default_currency_value"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/rate_go"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/rate_go"
            style="@style/Image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/go_description"
            android:src="@drawable/ic_arrow_right"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/spacing2"
            android:layout_marginTop="@dimen/spacing8"
            android:background="@color/white"
            app:layout_constraintTop_toBottomOf="@id/rate_flag" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>